--- a/package.json
+++ b/package.json
@@ -1,31 +1,29 @@
 {
-  "_from": "@babel/helper-function-name@^7.17.9",
-  "_id": "@babel/helper-function-name@7.17.9",
+  "TODO": "The @babel/traverse dependency is only needed for the NodePath TS type. We can consider exporting it from @babel/core.",
+  "_from": "@babel/helper-hoist-variables@^7.16.7",
+  "_id": "@babel/helper-hoist-variables@7.16.7",
   "_inBundle": false,
-  "_integrity": "sha512-7cRisGlVtiVqZ0MW0/yFB4atgpGLWEHUVYnb448hZK4x+vih0YO5UoS11XIYtZYqHd0dIPMdUSv8q5K4LdMnIg==",
-  "_location": "/@babel/helper-function-name",
+  "_integrity": "sha512-m04d/0Op34H5v7pbZw6pSKP7weA6lsMvfiIAMeIvkY/R4xQtBSMFEigu9QTZ2qB/9l22vsxtM8a+Q8CzD255fg==",
+  "_location": "/@babel/helper-hoist-variables",
   "_phantomChildren": {},
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "@babel/helper-function-name@^7.17.9",
-    "name": "@babel/helper-function-name",
-    "escapedName": "@babel%2fhelper-function-name",
+    "raw": "@babel/helper-hoist-variables@^7.16.7",
+    "name": "@babel/helper-hoist-variables",
+    "escapedName": "@babel%2fhelper-hoist-variables",
     "scope": "@babel",
-    "rawSpec": "^7.17.9",
+    "rawSpec": "^7.16.7",
     "saveSpec": null,
-    "fetchSpec": "^7.17.9"
+    "fetchSpec": "^7.16.7"
   },
   "_requiredBy": [
-    "/@babel/helper-create-class-features-plugin",
-    "/@babel/helper-wrap-function",
-    "/@babel/plugin-transform-classes",
-    "/@babel/plugin-transform-function-name",
+    "/@babel/plugin-transform-modules-systemjs",
     "/@babel/traverse"
   ],
-  "_resolved": "https://registry.npmjs.org/@babel/helper-function-name/-/helper-function-name-7.17.9.tgz",
-  "_shasum": "136fcd54bc1da82fcb47565cf16fd8e444b1ff12",
-  "_spec": "@babel/helper-function-name@^7.17.9",
+  "_resolved": "https://registry.npmjs.org/@babel/helper-hoist-variables/-/helper-hoist-variables-7.16.7.tgz",
+  "_shasum": "86bcb19a77a509c7b77d0e22323ef588fa58c246",
+  "_spec": "@babel/helper-hoist-variables@^7.16.7",
   "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\traverse",
   "author": {
     "name": "The Babel Team",
@@ -36,25 +34,27 @@
   },
   "bundleDependencies": false,
   "dependencies": {
-    "@babel/template": "^7.16.7",
-    "@babel/types": "^7.17.0"
+    "@babel/types": "^7.16.7"
   },
   "deprecated": false,
-  "description": "Helper function to change the property 'name' of every function",
+  "description": "Helper function to hoist variables",
+  "devDependencies": {
+    "@babel/traverse": "^7.16.7"
+  },
   "engines": {
     "node": ">=6.9.0"
   },
-  "homepage": "https://babel.dev/docs/en/next/babel-helper-function-name",
+  "homepage": "https://babel.dev/docs/en/next/babel-helper-hoist-variables",
   "license": "MIT",
   "main": "./lib/index.js",
-  "name": "@babel/helper-function-name",
+  "name": "@babel/helper-hoist-variables",
   "publishConfig": {
     "access": "public"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/babel/babel.git",
-    "directory": "packages/babel-helper-function-name"
+    "directory": "packages/babel-helper-hoist-variables"
   },
-  "version": "7.17.9"
+  "version": "7.16.7"
 }
