--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "_from": "@babel/helper-member-expression-to-functions@^7.17.7",
-  "_id": "@babel/helper-member-expression-to-functions@7.17.7",
+  "_from": "@babel/helper-module-imports@^7.16.7",
+  "_id": "@babel/helper-module-imports@7.16.7",
   "_inBundle": false,
-  "_integrity": "sha512-thxXgnQ8qQ11W2wVUObIqDL4p148VMxkt5T/qpN5k2fboRyzFGFmKsTGViquyM5QHKUy48OZoca8kw4ajaDPyw==",
-  "_location": "/@babel/helper-member-expression-to-functions",
+  "_integrity": "sha512-LVtS6TqjJHFc+nYeITRo6VLXve70xmq7wPhWTqDJusJEgGmkAACWwMiTNrvfoQo6hEhFwAIixNkvB0jPXDL8Wg==",
+  "_location": "/@babel/helper-module-imports",
   "_phantomChildren": {},
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "@babel/helper-member-expression-to-functions@^7.17.7",
-    "name": "@babel/helper-member-expression-to-functions",
-    "escapedName": "@babel%2fhelper-member-expression-to-functions",
+    "raw": "@babel/helper-module-imports@^7.16.7",
+    "name": "@babel/helper-module-imports",
+    "escapedName": "@babel%2fhelper-module-imports",
     "scope": "@babel",
-    "rawSpec": "^7.17.7",
+    "rawSpec": "^7.16.7",
     "saveSpec": null,
-    "fetchSpec": "^7.17.7"
+    "fetchSpec": "^7.16.7"
   },
   "_requiredBy": [
-    "/@babel/helper-create-class-features-plugin",
-    "/@babel/helper-replace-supers"
+    "/@babel/helper-define-polyfill-provider",
+    "/@babel/helper-module-transforms",
+    "/@babel/plugin-transform-async-to-generator",
+    "/@babel/plugin-transform-runtime"
   ],
-  "_resolved": "https://registry.npmjs.org/@babel/helper-member-expression-to-functions/-/helper-member-expression-to-functions-7.17.7.tgz",
-  "_shasum": "a34013b57d8542a8c4ff8ba3f747c02452a4d8c4",
-  "_spec": "@babel/helper-member-expression-to-functions@^7.17.7",
-  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\helper-create-class-features-plugin",
+  "_resolved": "https://registry.npmjs.org/@babel/helper-module-imports/-/helper-module-imports-7.16.7.tgz",
+  "_shasum": "25612a8091a999704461c8a222d0efec5d091437",
+  "_spec": "@babel/helper-module-imports@^7.16.7",
+  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\helper-module-transforms",
   "author": {
     "name": "The Babel Team",
     "url": "https://babel.dev/team"
@@ -33,27 +35,28 @@
   },
   "bundleDependencies": false,
   "dependencies": {
-    "@babel/types": "^7.17.0"
+    "@babel/types": "^7.16.7"
   },
   "deprecated": false,
-  "description": "Helper function to replace certain member expressions with function calls",
+  "description": "Babel helper functions for inserting module loads",
   "devDependencies": {
-    "@babel/traverse": "^7.17.3"
+    "@babel/core": "^7.16.7",
+    "@babel/traverse": "^7.16.7"
   },
   "engines": {
     "node": ">=6.9.0"
   },
-  "homepage": "https://babel.dev/docs/en/next/babel-helper-member-expression-to-functions",
+  "homepage": "https://babel.dev/docs/en/next/babel-helper-module-imports",
   "license": "MIT",
   "main": "./lib/index.js",
-  "name": "@babel/helper-member-expression-to-functions",
+  "name": "@babel/helper-module-imports",
   "publishConfig": {
     "access": "public"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/babel/babel.git",
-    "directory": "packages/babel-helper-member-expression-to-functions"
+    "directory": "packages/babel-helper-module-imports"
   },
-  "version": "7.17.7"
+  "version": "7.16.7"
 }
