--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "_from": "@babel/helper-module-imports@^7.16.7",
-  "_id": "@babel/helper-module-imports@7.16.7",
+  "_from": "@babel/helper-module-transforms@^7.17.7",
+  "_id": "@babel/helper-module-transforms@7.17.7",
   "_inBundle": false,
-  "_integrity": "sha512-LVtS6TqjJHFc+nYeITRo6VLXve70xmq7wPhWTqDJusJEgGmkAACWwMiTNrvfoQo6hEhFwAIixNkvB0jPXDL8Wg==",
-  "_location": "/@babel/helper-module-imports",
+  "_integrity": "sha512-VmZD99F3gNTYB7fJRDTi+u6l/zxY0BE6OIxPSU7a50s6ZUQkHwSDmV92FfM+oCG0pZRVojGYhkR8I0OGeCVREw==",
+  "_location": "/@babel/helper-module-transforms",
   "_phantomChildren": {},
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "@babel/helper-module-imports@^7.16.7",
-    "name": "@babel/helper-module-imports",
-    "escapedName": "@babel%2fhelper-module-imports",
+    "raw": "@babel/helper-module-transforms@^7.17.7",
+    "name": "@babel/helper-module-transforms",
+    "escapedName": "@babel%2fhelper-module-transforms",
     "scope": "@babel",
-    "rawSpec": "^7.16.7",
+    "rawSpec": "^7.17.7",
     "saveSpec": null,
-    "fetchSpec": "^7.16.7"
+    "fetchSpec": "^7.17.7"
   },
   "_requiredBy": [
-    "/@babel/helper-define-polyfill-provider",
-    "/@babel/helper-module-transforms",
-    "/@babel/plugin-transform-async-to-generator",
-    "/@babel/plugin-transform-runtime"
+    "/@babel/core",
+    "/@babel/plugin-transform-modules-amd",
+    "/@babel/plugin-transform-modules-commonjs",
+    "/@babel/plugin-transform-modules-systemjs",
+    "/@babel/plugin-transform-modules-umd"
   ],
-  "_resolved": "https://registry.npmjs.org/@babel/helper-module-imports/-/helper-module-imports-7.16.7.tgz",
-  "_shasum": "25612a8091a999704461c8a222d0efec5d091437",
-  "_spec": "@babel/helper-module-imports@^7.16.7",
-  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\helper-module-transforms",
+  "_resolved": "https://registry.npmjs.org/@babel/helper-module-transforms/-/helper-module-transforms-7.17.7.tgz",
+  "_shasum": "3943c7f777139e7954a5355c815263741a9c1cbd",
+  "_spec": "@babel/helper-module-transforms@^7.17.7",
+  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\core",
   "author": {
     "name": "The Babel Team",
     "url": "https://babel.dev/team"
@@ -35,28 +36,31 @@
   },
   "bundleDependencies": false,
   "dependencies": {
-    "@babel/types": "^7.16.7"
+    "@babel/helper-environment-visitor": "^7.16.7",
+    "@babel/helper-module-imports": "^7.16.7",
+    "@babel/helper-simple-access": "^7.17.7",
+    "@babel/helper-split-export-declaration": "^7.16.7",
+    "@babel/helper-validator-identifier": "^7.16.7",
+    "@babel/template": "^7.16.7",
+    "@babel/traverse": "^7.17.3",
+    "@babel/types": "^7.17.0"
   },
   "deprecated": false,
-  "description": "Babel helper functions for inserting module loads",
-  "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/traverse": "^7.16.7"
-  },
+  "description": "Babel helper functions for implementing ES6 module transformations",
   "engines": {
     "node": ">=6.9.0"
   },
-  "homepage": "https://babel.dev/docs/en/next/babel-helper-module-imports",
+  "homepage": "https://babel.dev/docs/en/next/babel-helper-module-transforms",
   "license": "MIT",
   "main": "./lib/index.js",
-  "name": "@babel/helper-module-imports",
+  "name": "@babel/helper-module-transforms",
   "publishConfig": {
     "access": "public"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/babel/babel.git",
-    "directory": "packages/babel-helper-module-imports"
+    "directory": "packages/babel-helper-module-transforms"
   },
-  "version": "7.16.7"
+  "version": "7.17.7"
 }
