--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
-  "_from": "@babel/helper-module-transforms@^7.17.7",
-  "_id": "@babel/helper-module-transforms@7.17.7",
+  "_from": "@babel/helper-optimise-call-expression@^7.16.7",
+  "_id": "@babel/helper-optimise-call-expression@7.16.7",
   "_inBundle": false,
-  "_integrity": "sha512-VmZD99F3gNTYB7fJRDTi+u6l/zxY0BE6OIxPSU7a50s6ZUQkHwSDmV92FfM+oCG0pZRVojGYhkR8I0OGeCVREw==",
-  "_location": "/@babel/helper-module-transforms",
+  "_integrity": "sha512-EtgBhg7rd/JcnpZFXpBy0ze1YRfdm7BnBX4uKMBd3ixa3RGAE002JZB66FJyNH7g0F38U05pXmA5P8cBh7z+1w==",
+  "_location": "/@babel/helper-optimise-call-expression",
   "_phantomChildren": {},
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "@babel/helper-module-transforms@^7.17.7",
-    "name": "@babel/helper-module-transforms",
-    "escapedName": "@babel%2fhelper-module-transforms",
+    "raw": "@babel/helper-optimise-call-expression@^7.16.7",
+    "name": "@babel/helper-optimise-call-expression",
+    "escapedName": "@babel%2fhelper-optimise-call-expression",
     "scope": "@babel",
-    "rawSpec": "^7.17.7",
+    "rawSpec": "^7.16.7",
     "saveSpec": null,
-    "fetchSpec": "^7.17.7"
+    "fetchSpec": "^7.16.7"
   },
   "_requiredBy": [
-    "/@babel/core",
-    "/@babel/plugin-transform-modules-amd",
-    "/@babel/plugin-transform-modules-commonjs",
-    "/@babel/plugin-transform-modules-systemjs",
-    "/@babel/plugin-transform-modules-umd"
+    "/@babel/helper-create-class-features-plugin",
+    "/@babel/helper-replace-supers",
+    "/@babel/plugin-transform-classes"
   ],
-  "_resolved": "https://registry.npmjs.org/@babel/helper-module-transforms/-/helper-module-transforms-7.17.7.tgz",
-  "_shasum": "3943c7f777139e7954a5355c815263741a9c1cbd",
-  "_spec": "@babel/helper-module-transforms@^7.17.7",
-  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\core",
+  "_resolved": "https://registry.npmjs.org/@babel/helper-optimise-call-expression/-/helper-optimise-call-expression-7.16.7.tgz",
+  "_shasum": "a34e3560605abbd31a18546bd2aad3e6d9a174f2",
+  "_spec": "@babel/helper-optimise-call-expression@^7.16.7",
+  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\helper-create-class-features-plugin",
   "author": {
     "name": "The Babel Team",
     "url": "https://babel.dev/team"
@@ -36,31 +34,28 @@
   },
   "bundleDependencies": false,
   "dependencies": {
-    "@babel/helper-environment-visitor": "^7.16.7",
-    "@babel/helper-module-imports": "^7.16.7",
-    "@babel/helper-simple-access": "^7.17.7",
-    "@babel/helper-split-export-declaration": "^7.16.7",
-    "@babel/helper-validator-identifier": "^7.16.7",
-    "@babel/template": "^7.16.7",
-    "@babel/traverse": "^7.17.3",
-    "@babel/types": "^7.17.0"
+    "@babel/types": "^7.16.7"
   },
   "deprecated": false,
-  "description": "Babel helper functions for implementing ES6 module transformations",
+  "description": "Helper function to optimise call expression",
+  "devDependencies": {
+    "@babel/generator": "^7.16.7",
+    "@babel/parser": "^7.16.7"
+  },
   "engines": {
     "node": ">=6.9.0"
   },
-  "homepage": "https://babel.dev/docs/en/next/babel-helper-module-transforms",
+  "homepage": "https://babel.dev/docs/en/next/babel-helper-optimise-call-expression",
   "license": "MIT",
   "main": "./lib/index.js",
-  "name": "@babel/helper-module-transforms",
+  "name": "@babel/helper-optimise-call-expression",
   "publishConfig": {
     "access": "public"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/babel/babel.git",
-    "directory": "packages/babel-helper-module-transforms"
+    "directory": "packages/babel-helper-optimise-call-expression"
   },
-  "version": "7.17.7"
+  "version": "7.16.7"
 }
