--- a/composer.json
+++ b/composer.json
@@ -1,43 +1,59 @@
 {
-    "name": "asm89/stack-cors",
-    "description": "Cross-origin resource sharing library and stack middleware",
-    "keywords": ["stack", "cors"],
-    "homepage": "https://github.com/asm89/stack-cors",
-    "type": "library",
+    "name": "barryvdh/laravel-dompdf",
+    "description": "A DOMPDF Wrapper for Laravel",
     "license": "MIT",
+    "keywords": ["laravel", "dompdf", "pdf"],
     "authors": [
         {
-            "name": "Alexander",
-            "email": "iam.asm89@gmail.com"
+            "name": "Barry vd. Heuvel",
+            "email": "barryvdh@gmail.com"
         }
     ],
     "require": {
-        "php": "^7.2|^8.0",
-        "symfony/http-foundation": "^4|^5|^6",
-        "symfony/http-kernel": "^4|^5|^6"
+        "php": "^7.2 || ^8.0",
+        "dompdf/dompdf": "^1.2.1",
+        "illuminate/support": "^6|^7|^8|^9"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7|^9",
-        "squizlabs/php_codesniffer": "^3.5"
+        "orchestra/testbench": "^4|^5|^6|^7",
+        "squizlabs/php_codesniffer": "^3.5",
+        "phpro/grumphp": "^1",
+        "nunomaduro/larastan": "^1|^2"
     },
     "autoload": {
         "psr-4": {
-            "Asm89\\Stack\\": "src/"
+            "Barryvdh\\DomPDF\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Asm89\\Stack\\Tests\\": "tests/"
+            "Barryvdh\\DomPDF\\Tests\\": "tests"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        },
+        "laravel": {
+            "providers": [
+                "Barryvdh\\DomPDF\\ServiceProvider"
+            ],
+            "aliases": {
+                "PDF": "Barryvdh\\DomPDF\\Facade\\Pdf"
+            }
         }
     },
     "scripts": {
         "test": "phpunit",
-        "check-style": "phpcs -p --standard=PSR12 --exclude=Generic.Files.LineLength --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src",
-        "fix-style": "phpcbf -p --standard=PSR12 --exclude=Generic.Files.LineLength --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src"
+        "check-style": "phpcs -p --standard=psr12 src/",
+        "fix-style": "phpcbf -p --standard=psr12 src/",
+        "phpstan": "phpstan analyze --memory-limit=-1"
     },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.1-dev"
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "phpro/grumphp": true
         }
     }
 }
