--- a/composer.json
+++ b/composer.json
@@ -1,59 +1,35 @@
 {
-    "name": "barryvdh/laravel-dompdf",
-    "description": "A DOMPDF Wrapper for Laravel",
-    "license": "MIT",
-    "keywords": ["laravel", "dompdf", "pdf"],
-    "authors": [
-        {
-            "name": "Barry vd. Heuvel",
-            "email": "barryvdh@gmail.com"
-        }
+    "name": "brick/math",
+    "description": "Arbitrary-precision arithmetic library",
+    "type": "library",
+    "keywords": [
+        "Brick",
+        "Math",
+        "Arbitrary-precision",
+        "Arithmetic",
+        "BigInteger",
+        "BigDecimal",
+        "BigRational",
+        "Bignum"
     ],
+    "license": "MIT",
     "require": {
-        "php": "^7.2 || ^8.0",
-        "dompdf/dompdf": "^1.2.1",
-        "illuminate/support": "^6|^7|^8|^9"
+        "php": "^7.1 || ^8.0",
+        "ext-json": "*"
     },
     "require-dev": {
-        "orchestra/testbench": "^4|^5|^6|^7",
-        "squizlabs/php_codesniffer": "^3.5",
-        "phpro/grumphp": "^1",
-        "nunomaduro/larastan": "^1|^2"
+        "phpunit/phpunit": "^7.5.15 || ^8.5 || ^9.0",
+        "php-coveralls/php-coveralls": "^2.2",
+        "vimeo/psalm": "4.9.2"
     },
     "autoload": {
         "psr-4": {
-            "Barryvdh\\DomPDF\\": "src"
+            "Brick\\Math\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Barryvdh\\DomPDF\\Tests\\": "tests"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
-        },
-        "laravel": {
-            "providers": [
-                "Barryvdh\\DomPDF\\ServiceProvider"
-            ],
-            "aliases": {
-                "PDF": "Barryvdh\\DomPDF\\Facade\\Pdf"
-            }
-        }
-    },
-    "scripts": {
-        "test": "phpunit",
-        "check-style": "phpcs -p --standard=psr12 src/",
-        "fix-style": "phpcbf -p --standard=psr12 src/",
-        "phpstan": "phpstan analyze --memory-limit=-1"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "config": {
-        "allow-plugins": {
-            "phpro/grumphp": true
+            "Brick\\Math\\Tests\\": "tests/"
         }
     }
 }
