--- a/composer.json
+++ b/composer.json
@@ -1,35 +1,67 @@
 {
-    "name": "brick/math",
-    "description": "Arbitrary-precision arithmetic library",
+    "name": "dflydev/dot-access-data",
     "type": "library",
-    "keywords": [
-        "Brick",
-        "Math",
-        "Arbitrary-precision",
-        "Arithmetic",
-        "BigInteger",
-        "BigDecimal",
-        "BigRational",
-        "Bignum"
-    ],
+    "description": "Given a deep data structure, access data by dot notation.",
+    "homepage": "https://github.com/dflydev/dflydev-dot-access-data",
+    "keywords": ["dot", "access", "data", "notation"],
     "license": "MIT",
+    "authors": [
+        {
+            "name": "Dragonfly Development Inc.",
+            "email": "info@dflydev.com",
+            "homepage": "http://dflydev.com"
+        },
+        {
+            "name": "Beau Simensen",
+            "email": "beau@dflydev.com",
+            "homepage": "http://beausimensen.com"
+        },
+        {
+            "name": "Carlos Frutos",
+            "email": "carlos@kiwing.it",
+            "homepage": "https://github.com/cfrutos"
+        },
+        {
+            "name": "Colin O'Dell",
+            "email": "colinodell@gmail.com",
+            "homepage": "https://www.colinodell.com"
+        }
+    ],
     "require": {
-        "php": "^7.1 || ^8.0",
-        "ext-json": "*"
+        "php": "^7.1 || ^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5.15 || ^8.5 || ^9.0",
-        "php-coveralls/php-coveralls": "^2.2",
-        "vimeo/psalm": "4.9.2"
+        "phpstan/phpstan": "^0.12.42",
+        "phpunit/phpunit": "^7.5 || ^8.5 || ^9.3",
+        "scrutinizer/ocular": "1.6.0",
+        "squizlabs/php_codesniffer": "^3.5",
+        "vimeo/psalm": "^3.14"
     },
     "autoload": {
         "psr-4": {
-            "Brick\\Math\\": "src/"
+            "Dflydev\\DotAccessData\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Brick\\Math\\Tests\\": "tests/"
+            "Dflydev\\DotAccessData\\": "tests/"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-main": "3.x-dev"
+        }
+    },
+    "scripts": {
+        "phpcs": "phpcs",
+        "phpstan": "phpstan analyse",
+        "phpunit": "phpunit --no-coverage",
+        "psalm": "psalm",
+        "test": [
+            "@phpcs",
+            "@phpstan",
+            "@psalm",
+            "@phpunit"
+        ]
     }
 }
