--- a/composer.json
+++ b/composer.json
@@ -1,67 +1,36 @@
 {
-    "name": "dflydev/dot-access-data",
+    "name": "doctrine/inflector",
     "type": "library",
-    "description": "Given a deep data structure, access data by dot notation.",
-    "homepage": "https://github.com/dflydev/dflydev-dot-access-data",
-    "keywords": ["dot", "access", "data", "notation"],
+    "description": "PHP Doctrine Inflector is a small library that can perform string manipulations with regard to upper/lowercase and singular/plural forms of words.",
+    "keywords": ["php", "strings", "words", "manipulation", "inflector", "inflection", "uppercase", "lowercase", "singular", "plural"],
+    "homepage": "https://www.doctrine-project.org/projects/inflector.html",
     "license": "MIT",
     "authors": [
-        {
-            "name": "Dragonfly Development Inc.",
-            "email": "info@dflydev.com",
-            "homepage": "http://dflydev.com"
-        },
-        {
-            "name": "Beau Simensen",
-            "email": "beau@dflydev.com",
-            "homepage": "http://beausimensen.com"
-        },
-        {
-            "name": "Carlos Frutos",
-            "email": "carlos@kiwing.it",
-            "homepage": "https://github.com/cfrutos"
-        },
-        {
-            "name": "Colin O'Dell",
-            "email": "colinodell@gmail.com",
-            "homepage": "https://www.colinodell.com"
-        }
+        {"name": "Guilherme Blanco", "email": "guilhermeblanco@gmail.com"},
+        {"name": "Roman Borschel", "email": "roman@code-factory.org"},
+        {"name": "Benjamin Eberlei", "email": "kontakt@beberlei.de"},
+        {"name": "Jonathan Wage", "email": "jonwage@gmail.com"},
+        {"name": "Johannes Schmitt", "email": "schmittjoh@gmail.com"}
     ],
     "require": {
-        "php": "^7.1 || ^8.0"
+        "php": "^7.2 || ^8.0"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.12.42",
-        "phpunit/phpunit": "^7.5 || ^8.5 || ^9.3",
-        "scrutinizer/ocular": "1.6.0",
-        "squizlabs/php_codesniffer": "^3.5",
-        "vimeo/psalm": "^3.14"
+        "doctrine/coding-standard": "^8.2",
+        "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan-phpunit": "^0.12",
+        "phpstan/phpstan-strict-rules": "^0.12",
+        "phpunit/phpunit": "^7.0 || ^8.0 || ^9.0",
+        "vimeo/psalm": "^4.10"
     },
     "autoload": {
         "psr-4": {
-            "Dflydev\\DotAccessData\\": "src/"
+            "Doctrine\\Inflector\\": "lib/Doctrine/Inflector"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Dflydev\\DotAccessData\\": "tests/"
+            "Doctrine\\Tests\\Inflector\\": "tests/Doctrine/Tests/Inflector"
         }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-main": "3.x-dev"
-        }
-    },
-    "scripts": {
-        "phpcs": "phpcs",
-        "phpstan": "phpstan analyse",
-        "phpunit": "phpunit --no-coverage",
-        "psalm": "psalm",
-        "test": [
-            "@phpcs",
-            "@phpstan",
-            "@psalm",
-            "@phpunit"
-        ]
     }
 }
