--- a/composer.json
+++ b/composer.json
@@ -1,48 +1,41 @@
 {
-    "name":              "doctrine/instantiator",
-    "description":       "A small, lightweight utility to instantiate objects in PHP without invoking their constructors",
-    "type":              "library",
-    "license":           "MIT",
-    "homepage":          "https://www.doctrine-project.org/projects/instantiator.html",
-    "keywords":          [
-        "instantiate",
-        "constructor"
+    "name": "doctrine/lexer",
+    "type": "library",
+    "description": "PHP Doctrine Lexer parser library that can be used in Top-Down, Recursive Descent Parsers.",
+    "keywords": [
+        "php",
+        "parser",
+        "lexer",
+        "annotations",
+        "docblock"
     ],
+    "homepage": "https://www.doctrine-project.org/projects/lexer.html",
+    "license": "MIT",
     "authors": [
-        {
-            "name":     "Marco Pivetta",
-            "email":    "ocramius@gmail.com",
-            "homepage": "https://ocramius.github.io/"
-        }
+        {"name": "Guilherme Blanco", "email": "guilhermeblanco@gmail.com"},
+        {"name": "Roman Borschel", "email": "roman@code-factory.org"},
+        {"name": "Johannes Schmitt", "email": "schmittjoh@gmail.com"}
     ],
     "require": {
         "php": "^7.1 || ^8.0"
     },
     "require-dev": {
-        "ext-phar":                  "*",
-        "ext-pdo":                   "*",
-        "doctrine/coding-standard":  "^9",
-        "phpbench/phpbench":         "^0.16 || ^1",
-        "phpstan/phpstan":           "^1.4",
-        "phpstan/phpstan-phpunit":   "^1",
-        "phpunit/phpunit":           "^7.5 || ^8.5 || ^9.5",
-        "vimeo/psalm": "^4.22"
+        "doctrine/coding-standard": "^9.0",
+        "phpstan/phpstan": "^1.3",
+        "phpunit/phpunit": "^7.5 || ^8.5 || ^9.5",
+        "vimeo/psalm": "^4.11"
     },
     "autoload": {
-        "psr-4": {
-            "Doctrine\\Instantiator\\": "src/Doctrine/Instantiator/"
-        }
+        "psr-4": { "Doctrine\\Common\\Lexer\\": "lib/Doctrine/Common/Lexer" }
     },
     "autoload-dev": {
-        "psr-0": {
-            "DoctrineTest\\InstantiatorPerformance\\": "tests",
-            "DoctrineTest\\InstantiatorTest\\": "tests",
-            "DoctrineTest\\InstantiatorTestAsset\\": "tests"
-        }
+        "psr-4": { "Doctrine\\Tests\\": "tests/Doctrine" }
     },
     "config": {
         "allow-plugins": {
+            "composer/package-versions-deprecated": true,
             "dealerdirect/phpcodesniffer-composer-installer": true
-        }
+        },
+        "sort-packages": true
     }
 }
