--- a/composer.json
+++ b/composer.json
@@ -1,41 +1,54 @@
 {
-    "name": "doctrine/lexer",
+    "name": "dompdf/dompdf",
     "type": "library",
-    "description": "PHP Doctrine Lexer parser library that can be used in Top-Down, Recursive Descent Parsers.",
-    "keywords": [
-        "php",
-        "parser",
-        "lexer",
-        "annotations",
-        "docblock"
-    ],
-    "homepage": "https://www.doctrine-project.org/projects/lexer.html",
-    "license": "MIT",
+    "description": "DOMPDF is a CSS 2.1 compliant HTML to PDF converter",
+    "homepage": "https://github.com/dompdf/dompdf",
+    "license": "LGPL-2.1",
     "authors": [
-        {"name": "Guilherme Blanco", "email": "guilhermeblanco@gmail.com"},
-        {"name": "Roman Borschel", "email": "roman@code-factory.org"},
-        {"name": "Johannes Schmitt", "email": "schmittjoh@gmail.com"}
+        {
+            "name": "Fabien Ménager",
+            "email": "fabien.menager@gmail.com"
+        },
+        {
+            "name": "Brian Sweeney",
+            "email": "eclecticgeek@gmail.com"
+        },
+        {
+            "name": "Gabriel Bull",
+            "email": "me@gabrielbull.com"
+        }
     ],
-    "require": {
-        "php": "^7.1 || ^8.0"
-    },
-    "require-dev": {
-        "doctrine/coding-standard": "^9.0",
-        "phpstan/phpstan": "^1.3",
-        "phpunit/phpunit": "^7.5 || ^8.5 || ^9.5",
-        "vimeo/psalm": "^4.11"
-    },
     "autoload": {
-        "psr-4": { "Doctrine\\Common\\Lexer\\": "lib/Doctrine/Common/Lexer" }
+        "psr-4": {
+            "Dompdf\\": "src/"
+        },
+        "classmap": [
+            "lib/"
+        ]
     },
     "autoload-dev": {
-        "psr-4": { "Doctrine\\Tests\\": "tests/Doctrine" }
+        "psr-4": {
+            "Dompdf\\Tests\\": "tests/"
+        }
     },
-    "config": {
-        "allow-plugins": {
-            "composer/package-versions-deprecated": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
-        },
-        "sort-packages": true
+    "require": {
+        "php": "^7.1 || ^8.0",
+        "ext-dom": "*",
+        "ext-mbstring": "*",
+        "phenx/php-font-lib": "^0.5.4",
+        "phenx/php-svg-lib": "^0.3.3 || ^0.4.0"
+    },
+    "require-dev": {
+        "ext-json": "*",
+        "ext-zip": "*",
+        "phpunit/phpunit": "^7.5 || ^8 || ^9",
+        "squizlabs/php_codesniffer": "^3.5",
+        "mockery/mockery": "^1.3"
+    },
+    "suggest": {
+        "ext-gd": "Needed to process images",
+        "ext-imagick": "Improves image processing performance",
+        "ext-gmagick": "Improves image processing performance",
+        "ext-zlib": "Needed for pdf stream compression"
     }
 }
