--- a/composer.json
+++ b/composer.json
@@ -1,54 +1,41 @@
 {
-    "name": "dompdf/dompdf",
+    "name": "dragonmantank/cron-expression",
     "type": "library",
-    "description": "DOMPDF is a CSS 2.1 compliant HTML to PDF converter",
-    "homepage": "https://github.com/dompdf/dompdf",
-    "license": "LGPL-2.1",
+    "description": "CRON for PHP: Calculate the next or previous run date and determine if a CRON expression is due",
+    "keywords": ["cron", "schedule"],
+    "license": "MIT",
     "authors": [
         {
-            "name": "Fabien Ménager",
-            "email": "fabien.menager@gmail.com"
-        },
-        {
-            "name": "Brian Sweeney",
-            "email": "eclecticgeek@gmail.com"
-        },
-        {
-            "name": "Gabriel Bull",
-            "email": "me@gabrielbull.com"
+            "name": "Chris Tankersley",
+            "email": "chris@ctankersley.com",
+            "homepage": "https://github.com/dragonmantank"
         }
     ],
+    "require": {
+        "php": "^7.2|^8.0",
+        "webmozart/assert": "^1.0"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^1.0",
+        "phpunit/phpunit": "^7.0|^8.0|^9.0",
+        "phpstan/phpstan-webmozart-assert": "^1.0",
+        "phpstan/extension-installer": "^1.0"
+    },
     "autoload": {
         "psr-4": {
-            "Dompdf\\": "src/"
-        },
-        "classmap": [
-            "lib/"
-        ]
+            "Cron\\": "src/Cron/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
-            "Dompdf\\Tests\\": "tests/"
+            "Cron\\Tests\\": "tests/Cron/"
         }
     },
-    "require": {
-        "php": "^7.1 || ^8.0",
-        "ext-dom": "*",
-        "ext-mbstring": "*",
-        "phenx/php-font-lib": "^0.5.4",
-        "phenx/php-svg-lib": "^0.3.3 || ^0.4.0"
+    "replace": {
+        "mtdowling/cron-expression": "^1.0"
     },
-    "require-dev": {
-        "ext-json": "*",
-        "ext-zip": "*",
-        "phpunit/phpunit": "^7.5 || ^8 || ^9",
-        "squizlabs/php_codesniffer": "^3.5",
-        "mockery/mockery": "^1.3"
-    },
-    "suggest": {
-        "ext-gd": "Needed to process images",
-        "ext-imagick": "Improves image processing performance",
-        "ext-gmagick": "Improves image processing performance",
-        "ext-zlib": "Needed for pdf stream compression"
+    "scripts": {
+        "phpstan": "./vendor/bin/phpstan analyze",
+        "test": "phpunit"
     }
 }
