--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,11 +1,15 @@
-includes:
-    - vendor/nunomaduro/larastan/extension.neon
-
 parameters:
-    paths:
-        - src
-        - tests
-    level: 8
+    checkMissingIterableValueType: false
+
     ignoreErrors:
-        # This is a global alias that cannot be detected by Larastan.
-        - '#Call to static method loadHtml\(\) on an unknown class PDF\.#'
+        - '#Call to an undefined method DateTimeInterface::add\(\)#'
+        - '#Call to an undefined method DateTimeInterface::modify\(\)#'
+        - '#Call to an undefined method DateTimeInterface::setDate\(\)#'
+        - '#Call to an undefined method DateTimeInterface::setTime\(\)#'
+        - '#Call to an undefined method DateTimeInterface::setTimezone\(\)#'
+        - '#Call to an undefined method DateTimeInterface::sub\(\)#'
+
+    level: max
+
+    paths:
+        - src/
